--- a/Problem2/index.html
+++ b/Problem2/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Countdown</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/7.8.1/rxjs.umd.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <input id="hoursInput" type="number" min="0" placeholder="Enter hours">
